# PAf20

./: .gitignore  BSPCountFast.c  BasicParallel.c  CountFast.cpp  Makefile  README.md  chess.h  makeplot.py  parallelSieve.c  parallelSieveDavid.c  parallelSieveErik.c  parallelSieveErikV2.c  parallelSieveGap.c  parallelSieveGapAndOdd.c  parallelSieveOdd.c  parallelSieveOddGapIdentical.c  recursive.c  sequentialSieve.c  sequentialSieve.h  sieve.h
bulk/: Board.cpp  Board.h  CMakeLists.txt  CountFast.cpp  CountIterating.cpp  CountIterating.h  CountRecursive.cpp  CountRecursive.h  DiagonalBitSet.cpp  DiagonalBitSet.h  ParallelSingleIteratingRandom.cpp  ParallelSingleIteratingRandom.h  ParallelSingleRecursiveRandom.cpp  ParallelSingleRecursiveRandom.h  chess.h  main.cpp  single.cpp
